Fix letter vuetify letter spacing bug and make issue https://github.com/vuetifyjs/vuetify/issues/19627

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,3 +6,7 @@
     letter-spacing: 0;
   }
 }
+
+.v-btn{
+  letter-spacing: 0 !important;
+}
